# notion2ics

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: date.rs  main.rs  notion.rs
