[package]
name = "notion2ics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.3"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
icalendar = "0.15"
clap = { version = "4.1", features = ["derive"] }
humantime = "2.1"
serde_path_to_error = "0.1.11"